# tauri-plugin-sqlite-drizzle

./: Cargo.toml
src/: lib.rs
